@@ -1,3 +1,8 @@
+2009-07-18  Patrice Dumas <pertusus@free.fr>
+
+	* hal_interface.c: fix crash when there is no property when 
+	removing device, patch from Dmitry A. Ermolov.
+
 2009-07-06  Patrice Dumas <pertusus@free.fr>
 
 	* doc/halevt.texi: add some tips regarding how to discover hal
